# esagil

./: README.md  pyproject.toml
app/esagil/file/: filters.py  image.py  util.py
data/pj68/raw/DataSet/: 17239-Metadata.json
esagil/source/scripts/: filters.py  image.py
esagil/source/utilities/: images.py  project.py
